# coq-haskell

./: .gitignore  ACompose.v  Alternative.v  Applicative.v  Axioms.v  Basics.v  Category.v  Conduit.v  Conor.v  Cont.v  CpdtTactics.v  Crush.v  Duncan.v  Either.v  EitherT.v  Endo.v  FCompose.v  Functor.v  HaskUtils.v  Haskell.v  Hyper.v  HyperOld.v  IApplicative.v  IEndo.v  IMonad.v  IState.v  Iso.v  LICENSE  LogicT.v  Ltac.v  MCompose.v  Makefile  Makefile.coq.local  Maybe.v  Monad.v  Pipes.v  Prelude.v  README.md  REndo.v  RState.v  (+12 more)
.github/workflows/: coq-ci.yml
Control/: Applicative.v  Category.v  Comonad.v  Iso.v  Lens.v  Monad.v  Pipes.v
Control/Monad/: Free.v  State.v
Control/Monad/Trans/: Free.v  State.v
Data/: Functor.v  IntSet.v  List.v  Vector.v
Data/Functor/: Container.v  Identity.v  Yoneda.v
Data/List/: Church.v
doc/: coq-typeclasses-debugging.txt
haskell/: Coq.hs
haskell/Hask/: Coq.hs  Utils.hs
research/: Alternative.v  Applicative.v  Basics.v  Category.v  Coinductive.v  Conduit.v  Conor.v  Cont.v  Duncan.v  Endo.v  Functor.v  Hyper.v  IApplicative.v  IMonad.v  Iso.v  MCompose.v  MMorph.v  Maybe.v  Monad.v  Pipes.v  RApplicative.v  RMonad.v  SProxy.v  Trans.v
src/: Crush.v  Extract.v  Haskell.v  Ltac.v  Prelude.v  Ssr.v
src/Control/: Applicative.v  Category.v  Comonad.v  Compose.v  Impl.v  Iso.v  Lens.v  Monad.v  Pipes.v
src/Control/Monad/: Base.v  Cont.v  Eff.v  EffPlain.v  Fix.v  Free.v  Freer.v  Indexed.v  Morph.v  Predicate.v  State.v
src/Control/Monad/Trans/: Class.v  Control.v  Either.v  FiatState.v  Free.v  LogicT.v  Reader.v  State.v
src/Data/: Either.v  Eq.v  Foldable.v  Functor.v  IntMap.v  IntSet.v  List.v  Maybe.v  Monoid.v  NonEmpty.v  Ord.v  Semigroup.v  Traversable.v  Tuple.v  Vector.v
src/Data/Functor/: Const.v  Container.v  Contravariant.v  Fix.v  Identity.v  Kan.v  Yoneda.v
src/Data/List/: Church.v
test/: Extracted.hs  Transfer.hs
