opam-version: "2.0"
maintainer: "johnw@newartisans.com"
version: "1.1.0"

homepage: "https://github.com/jwiegley/coq-haskell"
dev-repo: "git+https://github.com/jwiegley/coq-haskell.git"
bug-reports: "https://github.com/jwiegley/coq-haskell/issues"
license: "BSD-3-Clause"

synopsis: "A library to provide Haskell-familiar constructions in Coq"
description: """
This library is designed for Haskell users who are either using Coq to build
code intended for extraction to Haskell, or who wish to prototype/prove their
algorithms in Coq. It provides a collection of definitions and notations to
make Gallina more familiar to Haskellers.
"""

build: [make "JOBS=%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.14" & < "8.16~") | (= "dev")}
]

url {
  src: "https://github.com/jwiegley/coq-haskell/archive/refs/tags/1.1.tar.gz"
  checksum: "sha256=66243d54a6ff551a9ec762d69e5ff6a09869e7d5ce6504fa3a63350efde03720"
}

authors: [
  "John Wiegley"
]

tags: [
  "keyword:haskell"
  "category:Miscellaneous/Coq Extensions"
  "date:2022-03-29"
  "logpath:Hask"
]
